# lgsteelaiquery

./: .env.example  .gitignore  CLAUDE.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_meta_schema.py
backend/app/: __init__.py  config.py  dependencies.py  main.py  worker.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  chat.py  datasource.py
backend/app/core/: __init__.py  conversation.py  data_cleaner.py  excel_parser.py  field_mapper.py  nlg.py  prompt_builder.py  result_formatter.py  sql_executor.py  text_to_sql.py
backend/app/db/: __init__.py  biz_session.py  meta_session.py
backend/app/db/models/: __init__.py  audit.py  conversation.py  datasource.py  knowledge.py  user.py
backend/app/db/repositories/: __init__.py
backend/app/knowledge/: __init__.py  cache.py  dictionary.py  embedding.py
backend/app/llm/: __init__.py  base.py  qianwen.py  router.py  wenxin.py
backend/app/schemas/: __init__.py  auth.py  chat.py  common.py  datasource.py
backend/app/security/: __init__.py  audit.py  auth.py  desensitize.py  rbac.py  row_filter.py  sql_validator.py
backend/app/utils/: __init__.py  exceptions.py
backend/tests/unit/: test_conversation.py  test_result_formatter.py  test_sql_executor.py
docs/: 莱钢AI问数-第一期技术开发文档.md  莱钢AI问数开发计划.md  莱钢集团AI问数解决方案V2.md
frontend/: Dockerfile  index.html  nginx-spa.conf  package-lock.json  package.json  vite.config.ts
nginx/: nginx.conf
scripts/: check_ports.sh  init_meta.sql  seed_data.py  start.sh  stop.sh
(+49 files in other folders)
